--- a/_posts/2017-07-26-momentos.md
+++ b/_posts/2017-07-26-momentos.md
@@ -11,12 +11,14 @@ author: jotadrilo
 Y es que, como si de hojas se tratasen, a veces el viento trae consigo personas, cargadas de momentos inolvidables.
 
 A veces ardientes, que marcan muy profundo, nada mas tocarte.
-A veces delicados, que te hacen olvidar donde estas, nada mas besarte.
+
+A veces delicados, que te hacen olvidar donde estás, nada mas besarte.
+
 A veces duros, que te hacen recordar, aunque estén entre estrellas.
 
 Y es a veces pasa, que el viento trae consigo ángeles, y los deja ahí, perdidos para que los encuentres. Son ángeles que traen momentos muy concretos, muy raros, eternos. Son esas personas que cuesta encontrar, pero que encuentras, como si una brújula interna te hiciera ver entre la multitud, sonriendo. Con esa sonrisa que tienen las personas con las que vas a vivir miles de aventuras e historias que contar.
 
-Tengo la suerte de tener a algunos ángeles, que me escuchan, que rien, que lloran, y que bailan conmigo al son del viento. 
+Tengo la suerte de tener a algunos ángeles, que me escuchan, que ríen, que lloran, y que bailan conmigo al son del viento. 
 
 Gracias por formar parte de mí, y encontraros a donde quiera que vaya.
 
@@ -26,4 +28,4 @@ Gracias por arder, y no dejar que ningún momento sea otro más.
 
 Y gracias por bailar, siempre, sin parar. Sois vida.
 
-*Y son esos momentos, los que no te trae el viento, los que mas cuenta encontrar. Los que menos te imaginas. Los que amas.*
+*Y son esos momentos, los que no te trae el viento, los que máss cuenta encontrar. Los que menos te imaginas. Los que amas.*
